@@ -50,6 +50,18 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.bitcoinj</groupId>
+            <artifactId>bitcoinj-core</artifactId>
+            <version>${bitcoinj.version}</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk15to18</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- Runtime implementations -->
         <dependency>
@@ -283,6 +295,41 @@
                                         <modulepath/>
                                         <argument>--module</argument>
                                         <argument>org.bitcoinj.secp.examples/org.bitcoinj.secp.examples.Ecdsa</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>run-sign-many</id>
+            <activation>
+                <property>
+                    <name>run-sign-many</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>${exec-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>run-sign-many</id>
+                                <phase>package</phase>
+                                <goals><goal>exec</goal></goals>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <arguments>
+                                        <argument>--enable-native-access=org.bitcoinj.secp.ffm</argument>
+                                        <argument>-Djava.library.path=${env.LIBSECP_DIR}</argument>
+                                        <argument>--module-path</argument>
+                                        <modulepath/>
+                                        <argument>--module</argument>
+                                        <argument>org.bitcoinj.secp.examples/org.bitcoinj.secp.examples.SignMany</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
